--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.16.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
+    "mongoose": "^8.3.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
